objects/vlocity_cmt__AsyncExecuteJobUpdate__e.object
<CustomObject>
    <description>Controls the progress of each queueable job.</description>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <description>ID of the Async Process record.</description>
        <label>Async Process</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessJobId__c</fullName>
        <description>ID of the Async Process Job record.</description>
        <label>Async Process Job</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessStepId__c</fullName>
        <description>ID of the Async Process Step record.</description>
        <label>Async Process Step</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfItemsProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of items processed by the async job.</description>
        <label>Number of Items Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of async job.</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Async Execute Job Update</label>
    <pluralLabel>Async Execute Job Updates</pluralLabel>
</CustomObject>